button cut bug fixed (wrapped in div)

--- a/src/app/modules/ngx-md-button/button.css
+++ b/src/app/modules/ngx-md-button/button.css
@@ -1,9 +1,17 @@
 .md-shadow {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: 0.25s;
+  transition: box-shadow 0.25s;
 }
 
 .md-shadow:hover {
   box-shadow: rgba(0, 0, 0, 0.12) 0 15px 15px 0;
+}
+
+.button-container{
+  transition: transform 0.25s;
+}
+
+.button-container:hover{
   transform:translateY(-4px);
 }
+
