--- a/src/app/modules/ngx-md-button/ngx-md-round-button/ngx-md-round-button.component.css
+++ b/src/app/modules/ngx-md-button/ngx-md-round-button/ngx-md-round-button.component.css
@@ -1,11 +1,34 @@
 button {
   cursor: pointer;
   background: linear-gradient(to bottom left, #3949AB, #2962FF);
-  border: 1px solid transparent;
+  border: 0;
   height: 40px;
   width: 40px;
   border-radius: 50%;
-  margin-top: 4px;
-  margin-bottom: 4px;
-  outline: none;
+  outline: 0;
+}
+
+.ripple {
+  position: relative;
+  overflow: hidden;
+  transform: translate3d(0, 0, 0);
+}
+.ripple:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  background: radial-gradient(circle, #fff 10%, transparent 10.01%) no-repeat 50%;
+  transform: scale(10, 10);
+  opacity: 0;
+  transition: transform .5s, opacity 1s;
+}
+.ripple:active:after {
+  transform: scale(0, 0);
+  opacity: .3;
+  transition: 0s;
 }
